export interface NewsWidgetSettings {
    maxArticles: number;
    rssUrl? : string;
  }