

export interface DateTimeWidgetSettings {
    timezone: string;
    format: string;
    timeformat: '12h' | '24h';
    clockType: 'digital' | 'analog';
  }
  
  