export interface RemarkWidgetSettings {
    remarks: string[];
    intervalMinutes: number;
    }  