export interface WeatherWidgetSettings {
    city: string;
    units:  'celsius' | 'fahrenheit';
  }
  